# stm32-rust-embassy-cd27cp

./: Cargo.toml  Embed.toml  extra.rs
.cargo/: config.toml
src/: main.rs
