[package]
name = "stm32-rust-embassy-cd27cp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb="1.0.0"
embedded-storage="0.3.1"
static_cell = "2"
chrono={version="^0.4",default-features=false}
cortex-m-semihosting = "0.5.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

#Embassy dependencies
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32f407ve", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1", features = ["defmt" ] }
embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }
embassy-net-wiznet = { version = "0.2.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

[profile.release]
debug = 2
#codegen-units = 1
#debug-assertions = true # <-
#incremental = false
#opt-level = 'z'         # <-
#overflow-checks = true  # <-

